fix sonar check